[package]
name = "ogcat"
version = "0.0.1"
edition = "2021"
description = "fast utils for phylogenomics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["alloc"] }
serde_json = "1.0"
tabled = "0.7.0"
seq_io = "0.4.0-alpha.0"
itertools = "0.10.3"
rayon = "1.5.3"
lz4 = "1.23.1"
# thread_io = "0.3.0"
autocompress = { version = "0.2.2", features = ["lz4", "thread", "zstd"], default-features = false }
# statistical = "1.0.0"