[package]
name = "ogcat"
version = "0.0.1"
edition = "2021"
description = "fast utils for phylogenomics"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["alloc"] }
serde_json = "1.0"
tabled = "0.7.0"
seq_io = "0.4.0-alpha.0"
itertools = "0.10.3"
rayon = "1.5.3"
once_cell = "1.12.0"
autocompress = { version = "0.2.2", features = ["lz4", "gzip", "thread", "zstd"], default-features = false }
ahash = "0.7.6"
roaring = "0.9.0"
similar = "2.1.0"
shadow-rs = "0.11.0"
# medians = "0.1.3"

[build-dependencies]
shadow-rs = "0.11.0"

[profile.release]
lto = "thin"